<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A2E8E3E3"
    tools:context=".view.DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">

        <LinearLayout
            android:id="@+id/layoutKu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="120dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/roundedwhite"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">

            <ProgressBar
                android:id="@+id/progressBarDetail"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/recycleViewFollowers"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:text="@string/username"
                android:textColor="@color/subText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:text="@string/work_space"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:gravity="center"
                    android:text="@string/work"
                    android:textColor="@color/subText"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/location"
                    android:tint="@color/black"
                    app:srcCompat="@android:drawable/ic_menu_mylocation" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:gravity="center"
                    android:text="@string/location"
                    android:textColor="@color/subText"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/separator"
                    app:srcCompat="@android:drawable/presence_invisible"
                    app:tint="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:text="@string/followers"
                    android:textColor="@color/subText"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/followerss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:text="@string/nullable"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/separator"
                    app:srcCompat="@android:drawable/presence_invisible"
                    app:tint="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:text="@string/following"
                    android:textColor="@color/subText"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/followings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:text="@string/nullable"
                    android:textColor="@color/black"
                    android:textSize="14sp" />



            </LinearLayout>
        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatars"
            android:layout_width="150dp"
            android:layout_height="130dp"
            android:layout_centerHorizontal="true"
            app:civ_border_color="#a2515151"
            app:civ_border_width="1dp" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="350dp"
            android:background="@android:color/holo_blue_dark"
            android:minHeight="?actionBarSize"
            app:tabIndicatorFullWidth="false"
            app:tabIndicatorHeight="2dp"
            app:tabMode="fixed"
            app:tabRippleColor="@null"
            app:tabTextColor="@color/white" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="413dp" />

    </RelativeLayout>

</RelativeLayout>